--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://RehanSheikh-eng.github.io/Tic-Tac-Toe-Reactjs",
+  "homepage": "https://RehanSheikh-eng.github.io/Tic-Tac-Toe-Reactjs",
   "name": "tic-tac-toe",
   "version": "0.1.0",
   "private": true,
